fixed about dark background top margin & vertical line breaks on skill section

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -328,7 +328,12 @@ body {
     border-radius: 50px;
     margin-bottom: 10px;
     margin-left: 50px;
-}
+} 
+
+.desktop-skills-vert-line-1,
+.desktop-skills-vert-line-2 {
+    display: none;
+}   
 
 .front2__list,
 .back2__list,
@@ -703,8 +708,9 @@ body {
         background-color: #2e3029;
         height: 900px;
         width: 100%;
-        margin-top: 30px;
+        margin-top: 80px;
         border-radius: .5%;
+
     }
 
     .about__img {
@@ -774,6 +780,28 @@ body {
     .skills-vert-line {
         display: none;
     }
+
+    .desktop-skills-vert-line-1 {
+        display: inline-block;
+        border-left: 3px solid #2e3029;
+        height: 260px;
+        border-radius: 5px;
+        margin-bottom: 0px;
+        position: absolute;
+        bottom: 50px;
+        right: 1px;
+    }  
+
+    .desktop-skills-vert-line-2 {
+        display: inline-block;
+        border-left: 3px solid #2e3029;
+        height: 260px;
+        border-radius: 50px;
+        margin-bottom: 0px;
+        position: absolute;
+        right: -20px;
+        bottom: 50px;
+    }    
 
     .front2__list,
     .back2__list,
